Add right column with education and work experience

--- a/src/app/language/language.component.html
+++ b/src/app/language/language.component.html
@@ -1,4 +1,4 @@
-<div class="language" fxLayoutAlign="start center">
-  <span [ngClass]="language.flag" fxFlex>{{ language.country }}</span>
-  <span>{{ language.level }}</span>
+<div [ngClass]="language.flag" class="language" fxLayoutAlign="space-between center">
+  <span fxFlex>{{ language.country }}</span>
+  <span fxFlex>{{ language.level }}</span>
 </div>
