--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,17 @@
-<div class="contact">
+<div class="contact" fxLayout="column" fxLayoutAlign="center">
   <div class="subtitle">Contact</div>
-  <div>{{ contactInfo.email }}</div>
-  <div>{{ contactInfo.phone }}</div>
-  <div>{{ contactInfo.address }}</div>
+  <div fxLayout="column" fxLayoutAlign="start start">
+    <div class="contact-info">
+      <mat-icon class="icon" fxFlex>email</mat-icon>
+      <span>{{ contactInfo.email }}</span>
+    </div>
+    <div class="contact-info">
+      <mat-icon class="icon" fxFlex>phone</mat-icon>
+      <span>{{ contactInfo.phone }}</span>
+    </div>
+    <div class="contact-info">
+      <mat-icon class="icon" fxFlex>home</mat-icon>
+      <span>{{ contactInfo.address }}</span>
+    </div>
+  </div>
 </div>
