--- a/src/app/resume/resume.component.scss
+++ b/src/app/resume/resume.component.scss
@@ -7,12 +7,27 @@
 .left-column {
   background-color: $green;
   color: white;
-  padding: 10px;
+  padding: 0 10px 10px;
   text-align: center;
 }
 .right-column {
-  // border: solid 1px $grey;
-  color: $green;
+  background-color: white;
+  color: black;
+  padding: 10px;
+
+  .category {
+    padding: 5px 10px;
+    position: relative;
+    left: -20px;
+    top: 10px;
+    background-color: $grey;
+    color: black;
+  }
+
+  .work-experiences,
+  .studies {
+    margin-top: 20px;
+  }
 }
 
 .profile-picture {
@@ -21,12 +36,19 @@
   height: 200px;
 }
 
-.description {
+.profile-description {
   padding: 10px 0;
   border-top: solid 2px white;
   border-bottom: solid 2px white;
 }
 
-.languages {
-  text-align: left;
+.extra {
+  img {
+    margin-right: 5px;
+  }
+}
+
+.footer {
+  padding: 10px;
+  background-color: $grey;
 }
